QUARTZ-66 [Chore] 티켓 목록 조회 시, 담당자 프로필 사진도 조회 가능하도록 수정