@@ -15,7 +15,7 @@ public class TicketResponseConverter {
     public static ManagerTicketListResponse toManagerTicketListResponse(Page<Ticket> ticketPage) {
         List<ManagerTicketSummaryResponse> ticketList = ticketPage.getContent().stream()
                 .map(ManagerTicketSummaryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ManagerTicketListResponse(
                 ticketPage.getNumber() + 1,
@@ -29,7 +29,7 @@ public class TicketResponseConverter {
     public static UserTicketListResponse toUserTicketListResponse(Page<Ticket> ticketPage) {
         List<UserTicketSummaryResponse> ticketList = ticketPage.getContent().stream()
                 .map(UserTicketSummaryResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserTicketListResponse(
                 ticketPage.getNumber() + 1,
